# ort_test

./: README.md
char_rnn/: CMakeLists.txt  README.md  test_char_rnn.cpp
python/run_onnx/: README.md  run_onnx.py  test_run_onnx.py
run_onnx/: CMakeLists.txt  README.md  run_onnx.cpp
run_onnx/onnx/: char_rnn.onnx
